--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Персональна сторінка Лисенка Дениса Олександровича</title>
+    <style>
+        h1 {
+            text-align: center;
+            font-size: 24px;
+        }
+
+        p {
+            font-size: 120%;
+        }
+    </style>
 </head>
 <body>
     <h1>Персональна сторінка Лисенка Дениса Олександровича</h1>
