--- a/biography.html
+++ b/biography.html
@@ -3,6 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Автобіографія Лисенка Дениса Олександровича.</title>
+    <style>
+        h1 {
+            text-align: center;
+            font-size: 22px;
+        }
+        p a {
+            font-style: italic;
+        }
+        h3 {
+            text-align: center;
+        }
+        article {
+            font-size: 120%;
+        }
+        article h2 {
+            font-size: 144%;
+            font-weight: bold;
+        }
+        p a[href="#top"] {
+            text-transform: uppercase;
+        }
+        p a[href="#top"]:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <h1>Автобіографія Лисенка Дениса Олександровича.</h1>
