--- a/nowadays.html
+++ b/nowadays.html
@@ -3,13 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Сьогодення Лисенка Дениса Олександровича.</title>
+    <style>
+        h1 {
+            text-align: center;
+            font-size: 22px;
+        }
+        p a {
+            font-style: italic;
+        }
+        h2 {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <h1>Сьогодення Лисенка Дениса Олександровича.</h1>
 
-    <p><a href="index.html">Назад на головну</a></p>
+    <p><a href="index.html"><i>Назад на головну</i></a></p>
 
-    <h2>Мій типовий список покупок</h2>
+    <h2 style="text-align: center;">Мій типовий список покупок</h2>
     <ul>
         <li>Молочні продукти:
             <ul>
@@ -34,7 +46,7 @@
         </li>
     </ul>
 
-    <h2>Мій улюблений десерт</h2>
+    <h2 style="text-align: center;">Мій улюблений десерт</h2>
     <ol>
         <li>Приготувати торт Наполеон:
             <ol>
