--- a/friends.html
+++ b/friends.html
@@ -3,42 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <title>Друзі Лисенка Дениса Олександровича</title>
+    <style>
+        h1 {
+            text-align: center;
+            font-size: 22px;
+        }
+        p a {
+            font-style: italic;
+        }
+        h2 {
+            text-align: center;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            text-align: center;
+            font-weight: bold;
+            color: white;
+            padding: 10px;
+        }
+        th {
+            background-color: green;
+        }
+        td:last-child {
+            text-align: right;
+        }
+    </style>
 </head>
 <body>
     <h1>Друзі Лисенка Дениса Олександровича</h1>
 
-    <p><a href="index.html">Назад на головну</a></p>
+    <p><a href="index.html"><i>Назад на головну</i></a></p>
 
     <h2>Мої друзі</h2>
-    <ul>
-        <li>
-            <strong>Прізвище:</strong> Іванов<br>
-            <strong>Ім’я:</strong> Владислав<br>
-            <strong>Дата народження:</strong> 15.07.2006<br>
-            <strong>Адреса проживання:</strong> вул. Центральна, 123<br>
-            <strong>Контактний телефон:</strong> +380123456789
-        </li>
-        <li>
-            <strong>Прізвище:</strong> Глек<br>
-            <strong>Ім’я:</strong> Юрій<br>
-            <strong>Дата народження:</strong> 03.02.2007<br>
-            <strong>Адреса проживання:</strong> вул. Шевченка, 456<br>
-            <strong>Контактний телефон:</strong> +380987654321
-        </li>
-        <li>
-            <strong>Прізвище:</strong> Сидоренко<br>
-            <strong>Ім’я:</strong> Андрій<br>
-            <strong>Дата народження:</strong> 20.09.2004<br>
-            <strong>Адреса проживання:</strong> вул. Чоровола, 789<br>
-            <strong>Контактний телефон:</strong> +380234567890
-        </li>
-        <li>
-            <strong>Прізвище:</strong> Коваленко<br>
-            <strong>Ім’я:</strong> Вадим<br>
-            <strong>Дата народження:</strong> 10.05.2006<br>
-            <strong>Адреса проживання:</strong> вул. Чорновола, 101<br>
-            <strong>Контактний телефон:</strong> +380345678901
-        </li>
-    </ul>
+    <table>
+        <tr>
+            <th>Прізвище</th>
+            <th>Ім’я</th>
+            <th>Дата народження</th>
+            <th>Адреса проживання</th>
+            <th>Контактний телефон</th>
+        </tr>
+        <tr>
+            <td>Іванов</td>
+            <td>Владислав</td>
+            <td>15.07.2006</td>
+            <td>вул. Центральна, 123</td>
+            <td>+380123456789</td>
+        </tr>
+        <tr>
+            <td>Глек</td>
+            <td>Юрій</td>
+            <td>03.02.2007</td>
+            <td>вул. Шевченка, 456</td>
+            <td>+380987654321</td>
+        </tr>
+        <tr>
+            <td>Сидоренко</td>
+            <td>Андрій</td>
+            <td>20.09.2004</td>
+            <td>вул. Чоровола, 789</td>
+            <td>+380234567890</td>
+        </tr>
+        <tr>
+            <td>Коваленко</td>
+            <td>Вадим</td>
+            <td>10.05.2006</td>
+            <td>вул. Чорновола, 101</td>
+            <td>+380345678901</td>
+        </tr>
+    </table>
 </body>
 </html>
